# fastapi-crud-jabuti

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  run.py
alembic/: env.py  script.py.mako
alembic/versions/: 0001_create_users_table.py
app/: main.py
app/api/: __init__.py  dependencies.py
app/api/routers/: __init__.py  users.py
app/cache/: __init__.py  client.py  user_cache.py
app/core/: __init__.py  config.py  exceptions.py  logging.py
app/database/: __init__.py  models.py  session.py
app/repositories/: __init__.py  user_repository.py
app/schemas/: __init__.py  user.py
app/services/: __init__.py  user_service.py
scripts/: docker-doctor.sh  fix-docker-dns-linux.sh
tests/: conftest.py  test_api_integration.py  test_db_session.py  test_user_cache.py  test_user_repository.py  test_user_service.py
